--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "pg": "^8.9.0",
-    "typeorm": "^0.3.11"
+    "typeorm": "^0.3.11",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
